--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.3.6",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.3.6",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
