--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
     "firebase": "^5.9.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
