--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^5.9.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^6.5.2",
     "zone.js": "~0.8.26"
   },
@@ -49,6 +50,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.2.4"
+    "typescript": "^3.1.6"
   }
 }
