--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
-    "firebase": "^5.9.1",
+    "firebase": "^5.11.1",
+    "firebaseui": "^4.2.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
