--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         npm install
         npm install -g firebase-tools
-        npm run ng -- build --prod
+        npm run build --prod
       env:
         CI: true
     - name: deploying to Firebase
