--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,6 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm link @angular/cli
         npm install -g firebase-tools
         npm run build --prod
       env:
