--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
         npm install
         npm link @angular/cli
         npm install -g firebase-tools
-        npm run build --prod
+        npm run ng -- build --prod
       env:
         CI: true
     - name: deploying to Firebase
